Finished Portfolio Cards with HTML and CSS

--- a/bio.html
+++ b/bio.html
@@ -85,7 +85,7 @@
                     <div class="col-md-4">
                         <h2 class="login">USER NAME</h2>
                         <div id="sect-03-cont-login-button" class="login-button">
-                            <button type="button" class="btn btn-dark">Logout</button>
+                            <button type="button" class="btn btn-dark"><a href="index.html">Logout</a></button>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -124,6 +124,9 @@
                         </div>
                     </div>
                     
+                </div>
+                <div id="sect-03-cont-play-button" class="login-button">
+                    <button type="button" class="btn btn-dark"><a href="https://www.youtube.com/watch?v=Mby09PGaPiE" target="_blank">Play Video</a></button>
                 </div>
             </div>
         </section>
